# AgriSensei

./: .gitignore  Cargo.toml  READEME.md
backup/src/: server_error.rs
data/: agrisensei.db
pages/: 404.html  index.html  style.css
pages/login/: index.html  script.js  style.css
pages/main_page/: connection.rs  index.html  script.js  style.css  todo.txt
pages/main_page/jscharting/: index.htm  license.txt
pages/main_page/jscharting/Documentation/js/: documentation.js
pages/main_page/jscharting/Documentation/tutorials/: Axis.html  AxisScales.html  AxisTicksMarkers.html  HomeAbout.html  accessibility.html  axisMultiple.html  axisRangeTicks.html  calculations.html  calendar.html  chartTypes.html  circularGauges.html  codeExpansion.html  cttCrosshair.html  customAttributes.html  dataAcquisition.html  dataAnimation.html  dataEngine.html  dataNesting.html  datagrid.html  editor.html  errorBars.html  exportServer.html  fills.html  fpApi.html  ganttType.html  gaugeChartType.html  gettingStarted.html  gettingStarted2.html  heatmapType.html  hierarchyStyling.html  highlights.html  icons.html  integration.html  interactivity.html  labelExpressions.html  labelFormatting.html  labelText.html  labels.html  legend.html  lineType.html  (+20 more)
pages/main_page/jscharting/Editor/: index.htm
pages/main_page/jscharting/Editor/js/: editor.js
pages/main_page/jscharting/Editor/resources/: babynamesus.csv  bitcoin-historical-data.csv  facebook-status.csv  (+30 more)
pages/main_page/jscharting/JSC/: jscharting-widgets.d.ts
pages/test_pages/: added_packet_confirm.html  measurement_confirm.html  post_forward.html  sensor_confirm.html  user_page.html
src/: components.rs  comps.rs  connection.rs  database.rs  handler.rs  lib.rs  main.rs  message.rs  rest.rs  server_error.rs  testing.rs  thread_pool.rs
src/comps/: components.rs  data_packet.rs  device.rs  sensor.rs  user_profile.rs
src/rest/: get.rs  post.rs
(+64 files in other folders)
