[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Sqlx has security layers if need adding. More info on their github
[dependencies]
chrono = "0.4.34"
http = "1.0.0"
httparse = "1.8.0"
image = "0.24.7"
mime_guess = "2.0.4"
png = "0.17.10"
regex = "1.10.3"
rusqlite = {version = "0.30.0", features = ["bundled", "chrono", "serde_json", "array"]}
serde_json = "1.0.113"
