[package]
name = "agrisensei"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agrisensei"
path = "src/main.rs"

[lib]
name = "agrisensei"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Sqlx has security layers if need adding. More info on their github
[dependencies]
async-std = "1.12.0"
chrono = {version = "0.4.34", features = ["serde"]}
futures = "0.3.30"
http = "1.0.0"
httparse = "1.8.0"
image = "0.24.7"
mime_guess = "2.0.4"
png = "0.17.10"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rusqlite = {version = "0.30.0", features = ["bundled", "chrono", "serde_json", "array"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.113"
tokio = {version = "1.36.0", features = ["macros"]}
